--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: LTAI5tFsVagkyKfsXqWCQ4Z8
+    access-key-secret: g4Iu7DOslDx6FzpbrasOz5hwUcHvYm
+    bucket-name: web-tlias-qwq
