商品浏览业务功能代码代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -16,3 +16,6 @@ sky:
     port: 6379
     password: ""
     database: 0
+  wechat:
+    appid: wx0b896f6d803431af
+    secret: fd37ed496315d810deeee3ed15d6d914
