--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -116,7 +116,11 @@
             <artifactId>poi-ooxml</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+            <version>2.7.3</version>
+        </dependency>
 
 
 
