--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -122,7 +122,17 @@
             <version>2.7.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.16</version>
+        </dependency>
 
     </dependencies>
 
